minor fix and make shorter random access code